--- a/characters.html
+++ b/characters.html
@@ -407,7 +407,7 @@
                 <!-- Tara Frost -->
                 <div class="character-card" data-category="hero">
                     <div class="character-image">
-                        <img src="images/Tara.jpg" alt="Tara Frost">
+                        <img src="images/tara.jpg" alt="Tara Frost">
                     </div>
                     <div class="character-info">
                         <div class="character-role">The Mystic</div>
@@ -426,7 +426,7 @@
                 <!-- Jax Storm -->
                 <div class="character-card" data-category="hero">
                     <div class="character-image">
-                        <img src="images/Jax.jpg" alt="Jax Storm">
+                        <img src="images/jax.jpg" alt="Jax Storm">
                     </div>
                     <div class="character-info">
                         <div class="character-role">The Warrior</div>
@@ -445,7 +445,7 @@
                 <!-- Nina Shade -->
                 <div class="character-card" data-category="hero">
                     <div class="character-image">
-                        <img src="images/Nina.jpg" alt="Nina Shade">
+                        <img src="images/nina.jpg" alt="Nina Shade">
                     </div>
                     <div class="character-info">
                         <div class="character-role">The Shadow</div>
@@ -464,7 +464,7 @@
                 <!-- Oakheart -->
                 <div class="character-card" data-category="hero">
                     <div class="character-image">
-                        <img src="images/Oakheart.jpg" alt="Oakheart">
+                        <img src="images/oakheart.jpg" alt="Oakheart">
                     </div>
                     <div class="character-info">
                         <div class="character-role">The Teacher</div>
@@ -483,7 +483,7 @@
                 <!-- Ravok -->
                 <div class="character-card" data-category="villain">
                     <div class="character-image">
-                        <img src="images/Ravok.jpg" alt="Ravok">
+                        <img src="images/ravok.jpg" alt="Ravok">
                     </div>
                     <div class="character-info">
                         <div class="character-role">The Antagonist</div>
@@ -502,7 +502,7 @@
                 <!-- Leo Frost -->
                 <div class="character-card" data-category="hero">
                     <div class="character-image">
-                        <img src="images/Leo.jpg" alt="Leo Frost">
+                        <img src="images/leo.jpg" alt="Leo Frost">
                     </div>
                     <div class="character-info">
                         <div class="character-role">The Double Agent</div>
